index.html Update
Updating the features and visuals in the index.html file. The format and additions fit the proper HTML style, making the site more visually appealing.

--- a/index.html
+++ b/index.html
@@ -1,15 +1,36 @@
-<h1>
-    <strong> Landon Waters </strong>
-</h1>
-<p>
-    (He/Him)
-</p>
-<h2> 
-    Contact Info: 
-</h2>
-<p>
-    Email: ljwaters@willamette.edu
-    <br>
-    <br>
-    Discord: landon#6362
-</p>
+<!DOCTYPE html>
+<!--Updating HTML with more features and better form-->
+<html lang="en">
+    <head align="middle";>
+        <title>Landon Waters</title>
+        <style>
+            body { background:white; }
+            h1 { background: rgb(210, 169, 240); color: white; font-weight: bold; }
+            h2 { background: rgb(210, 169, 240); color: white; font-weight: bold; }
+            p { background: rgb(175, 175, 180); color: white; }
+        </style>
+        <h1>Landon Waters</h1>
+    </head>
+
+    <body align="middle";>
+        <p>(He/Him)</p>
+        <h2>Contact Info: </h2>
+        <p>
+            Email: ljwaters@willamette.edu <!--Link to email?-->
+            <br>
+            <br>
+            Discord: landon#6362 <!--Link here for DM?-->
+            <br>
+            <br>
+            <a href="https://patorjk.com/games/snake/" title="JavaScript Snake">Fun game!!!</a>
+        </p>
+        <a href="https://giphy.com/gifs/vibes-vibing-vibin-GeimqsH0TLDt4tScGw">
+            <img alt="An incredibly awesome cat that is just doing his thing." 
+                title="Vibing Cat" 
+                href="https://giphy.com/gifs/vibes-vibing-vibin-GeimqsH0TLDt4tScGw" 
+                style="background-color:white;" 
+                src="https://media3.giphy.com/media/GeimqsH0TLDt4tScGw/giphy.gif" 
+                width="560px" align="middle">
+        </a>
+    </body>
+</html>
